// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates 5nodes raft kubernetes tessera 1`] = `
"#namespace:
#  name: quorum-test
sep_deployment_files: true
nodes:
  number: 5
service:
  type: NodePort
quorum:
  consensus: raft
  Node_DataDir: /etc/quorum/qdata
  Key_Dir_Base: 7nodes
  Permissioned_Nodes_File: out/config/permissioned-nodes.json
  Genesis_File: out/config/genesis.json
  quorum:
    Raft_Port: 50400
    Quorum_Version: 2.6.0
  storage:
    Type: PVC
    Capacity: 200Mi
  tm:
    Name: tessera
    Tm_Version: 0.10.5
    Port: 9000
    3Party_Port: 9080
    Tessera_Config_Dir: out/config
geth:
  Node_RPCPort: 8545
  NodeP2P_ListenAddr: 21000
  network:
    id: 10
    public: false
  verbosity: 9
  Geth_Startup_Params: --rpccorsdomain=\\\\\\"*\\\\\\""
`;

exports[`creates 7nodes istanbul docker generate keys 1`] = `
"#namespace:
#  name: quorum-test
sep_deployment_files: true
nodes:
  number: 7
service:
  type: NodePort
quorum:
  consensus: istanbul
  Node_DataDir: /etc/quorum/qdata
  Key_Dir_Base: out/config
  Permissioned_Nodes_File: out/config/permissioned-nodes.json
  Genesis_File: out/config/genesis.json
  quorum:
    Raft_Port: 50400
    Quorum_Version: 2.6.0
  storage:
    Type: PVC
    Capacity: 200Mi
  tm:
    Name: tessera
    Tm_Version: 0.10.5
    Port: 9000
    3Party_Port: 9080
    Tessera_Config_Dir: out/config
geth:
  Node_RPCPort: 8545
  NodeP2P_ListenAddr: 21000
  network:
    id: 10
    public: false
  verbosity: 9
  Geth_Startup_Params: --rpccorsdomain=\\\\\\"*\\\\\\""
`;

exports[`creates 7nodes istanbul docker generate keys no tessera 1`] = `
"#namespace:
#  name: quorum-test
sep_deployment_files: true
nodes:
  number: 7
service:
  type: NodePort
quorum:
  consensus: istanbul
  Node_DataDir: /etc/quorum/qdata
  Key_Dir_Base: out/config
  Permissioned_Nodes_File: out/config/permissioned-nodes.json
  Genesis_File: out/config/genesis.json
  quorum:
    Raft_Port: 50400
    Quorum_Version: 2.6.0
  storage:
    Type: PVC
    Capacity: 200Mi
  tm:
    Name: tessera
    Tm_Version: 0.10.5
    Port: 9000
    3Party_Port: 9080
    Tessera_Config_Dir: out/config
geth:
  Node_RPCPort: 8545
  NodeP2P_ListenAddr: 21000
  network:
    id: 10
    public: false
  verbosity: 9
  Geth_Startup_Params: --rpccorsdomain=\\\\\\"*\\\\\\""
`;

exports[`creates 7nodes istanbul kubernetes generate keys 1`] = `
"#namespace:
#  name: quorum-test
sep_deployment_files: true
nodes:
  number: 7
service:
  type: NodePort
quorum:
  consensus: istanbul
  Node_DataDir: /etc/quorum/qdata
  Key_Dir_Base: out/config
  Permissioned_Nodes_File: out/config/permissioned-nodes.json
  Genesis_File: out/config/genesis.json
  quorum:
    Raft_Port: 50400
    Quorum_Version: 2.6.0
  storage:
    Type: PVC
    Capacity: 200Mi
  tm:
    Name: tessera
    Tm_Version: 0.10.5
    Port: 9000
    3Party_Port: 9080
    Tessera_Config_Dir: out/config
geth:
  Node_RPCPort: 8545
  NodeP2P_ListenAddr: 21000
  network:
    id: 10
    public: false
  verbosity: 9
  Geth_Startup_Params: --rpccorsdomain=\\\\\\"*\\\\\\""
`;
